src/test/ui/issues/issue-20801.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-20801.rs:26:22
   |
LL |     let a = unsafe { *mut_ref() };
   |                      ^^^^^^^^^^
   |                      |
   |                      cannot move out of borrowed content
   |                      help: consider removing the `*`: `mut_ref()`

error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-20801.rs:29:22
   |
LL |     let b = unsafe { *imm_ref() };
   |                      ^^^^^^^^^^
   |                      |
   |                      cannot move out of borrowed content
   |                      help: consider removing the `*`: `imm_ref()`

error[E0507]: cannot move out of dereference of raw pointer
  --> $DIR/issue-20801.rs:32:22
   |
LL |     let c = unsafe { *mut_ptr() };
   |                      ^^^^^^^^^^
   |                      |
   |                      cannot move out of dereference of raw pointer
   |                      help: consider removing the `*`: `mut_ptr()`

error[E0507]: cannot move out of dereference of raw pointer
  --> $DIR/issue-20801.rs:35:22
   |
LL |     let d = unsafe { *const_ptr() };
   |                      ^^^^^^^^^^^^
   |                      |
   |                      cannot move out of dereference of raw pointer
   |                      help: consider removing the `*`: `const_ptr()`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0507`.
